--- a/dev/proline-v1_300x250/_styles/css/main.css
+++ b/dev/proline-v1_300x250/_styles/css/main.css
@@ -215,15 +215,55 @@ sup {
   opacity: 0;
 }
 
-.frame1 {
-  opacity: 1;
-}
-
 #banner {
   font-size: 20px;
   color: #333;
   width: 300px;
   height: 250px;
+}
+
+.bracket {
+  -webkit-transform: translate(0px, 0px) scale(0.5, 0.5);
+  -ms-transform: translate(0px, 0px) scale(0.5, 0.5);
+  transform: translate(0px, 0px) scale(0.5, 0.5);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  position: absolute;
+}
+
+.bracket.bracket_1 {
+  clip: rect(0px 410px 160px 290px);
+}
+
+.bracket.bracket_2 {
+  clip: rect(0px 560px 160px 290px);
+}
+
+.ill {
+  -webkit-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transform: translate(-150px, -250px) scale(0.5, 0.5);
+  -ms-transform: translate(-150px, -250px) scale(0.5, 0.5);
+  transform: translate(-150px, -250px) scale(0.5, 0.5);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  position: absolute;
+}
+
+#legalBtn {
+  -webkit-transform: translate(7px, 198px);
+  -ms-transform: translate(7px, 198px);
+  transform: translate(7px, 198px);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  position: absolute;
 }
 
 /*# sourceMappingURL=main.css.map */
